# citadel-saas-factory

./: .coderabbit.yml  .cursorindexignore  .env.example  .gitignore  .graphifyignore  .mcp.json  .npmignore  AGENT.md  AGENTS.md  CLAUDE.md  CLAUDE_CODE_MASTER_PROMPT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  Justfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  SOCIAL.md  ai-layer.config.yaml  context.md  docker-compose.yml  lefthook.yml  package.json  ruflo.config.yaml
backbone/: README.md  __init__.py  __main__.py  cli.py  config.yaml  pyproject.toml
backbone/agents/: __init__.py  base.py  registry.py  thinking.py
backbone/autonomy/: __init__.py  event_reactor.py  levels.py  self_healing.py
backbone/data/: __init__.py
backbone/governance/: __init__.py  rbac.py
backbone/memory/: __init__.py  config.py  entity_memory.py  episodic_memory.py  long_term_memory.py  manager.py  orchestrator.py  procedural_memory.py  schemas.py  semantic_memory.py  shared_memory.py  short_term_memory.py  working_memory.py
backbone/memory/api/: __init__.py  routes.py
backbone/observability/: __init__.py  tracer.py
backbone/orchestrator/: __init__.py  planner.py  router.py  state_manager.py  supervisor.py
backbone/policies/: __init__.py  safety.py
backbone/runtime/: __init__.py  engine.py
backbone/tools/: __init__.py  registry.py
backbone/validation/: __init__.py  validator.py
backbone/workflows/: __init__.py  task_graph.py
backend/: CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_fintech_domain_models.py
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  deps.py  users.py
backend/tests/: __init__.py  conftest.py  test_api_accounts.py  test_api_agents.py  test_api_auth.py  test_compliance.py  test_health.py  test_kyc.py  test_ledger.py  test_middleware_auth.py  test_middleware_rate_limit.py  test_middleware_security_headers.py  test_middleware_tenant.py
(+986 files in other folders)
